<resources>
    <string name="app_name">Messenger</string>
    <string name="login">Login</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="email_hint_text">Email</string>
    <string name="password_hint_text">Password</string>
    <string name="enter_email_and_password">Enter email and password</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password_hint_text">Confirm password</string>
    <string name="enter_all_fields">Enter all fields</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset_password">Reset password</string>
    <string name="registration">Registration</string>
    <string name="logout_menu_item">Logout</string>
    <string name="type_your_message">Type your message</string>
</resources>