<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/enter_your_email"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginVertical="10dp"
        />

    <EditText
        android:id="@+id/editTextEmailFPA"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/border"
        android:hint="@string/email_hint_text"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="15sp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonResetPasswordFPA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:background="@drawable/border"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:clickable="true"
        android:focusable="true"
        />

</LinearLayout>