<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registration"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_dark"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextNameRA"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/border"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/textViewName"
            android:inputType="text"
            android:importantForAutofill="no"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextLastNameRA"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/border"
            android:hint="@string/last_name"
            android:imeOptions="actionNext"
            android:padding="10dp"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/editTextNameRA"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextEmailRA"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/border"
            android:hint="@string/email_hint_text"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/editTextLastNameRA"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextPasswordRA"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/border"
            android:hint="@string/password_hint_text"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/editTextEmailRA"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextConfirmPasswordRA"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/border"
            android:hint="@string/confirm_password_hint_text"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/editTextPasswordRA"
            android:autofillHints="" />

        <TextView
            android:id="@+id/errorTextRA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text=""
            android:textColor="@android:color/holo_red_light"
            android:textSize="15sp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/editTextConfirmPasswordRA"
             />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegisterRA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/ripple_effect"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/errorTextRA" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>